--- a/client/src/assests/css/editProfile.css
+++ b/client/src/assests/css/editProfile.css
@@ -1,7 +1,6 @@
 .EditProfile {
   margin: auto;
-  width: 50%;
-  padding: 30px 0;
+  width: 80%;
 }
 
 @media (max-width: 1200px) {
@@ -17,15 +16,21 @@
 }
 
 .EditProfile .logo {
-  width: 40%;
-  margin: auto;
-  padding: 50px 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px 0;
 }
 
 @media (max-width: 900px) {
   .EditProfile .logo {
     width: 70%;
   }
+}
+
+.EditProfile .logo h1 {
+  padding: 0 10px;
 }
 
 .EditProfile .logo img {
@@ -46,18 +51,18 @@
   }
 }
 
-.EditProfile .register-box .left {
+.EditProfile .register-box .colum {
   width: 100%;
 }
 
 @media (max-width: 900px) {
-  .EditProfile .register-box .left {
+  .EditProfile .register-box .colum {
     width: 100%;
     margin: auto;
   }
 }
 
-.EditProfile .register-box .left select {
+.EditProfile .register-box .colum select {
   width: 48%;
   padding: 17.5px;
   border: 1px solid #bbb;
@@ -66,11 +71,11 @@
   cursor: pointer;
 }
 
-.EditProfile .register-box .left input[type='file'] {
+.EditProfile .register-box .colum input[type='file'] {
   display: none;
 }
 
-.EditProfile .register-box .left .file-input {
+.EditProfile .register-box .colum .file-input {
   width: 43%;
   padding: 15px;
   cursor: pointer;
