--- a/client/src/assests/css/sass/editProfile.scss
+++ b/client/src/assests/css/sass/editProfile.scss
@@ -1,7 +1,6 @@
 .EditProfile {
   margin: auto;
-  width: 50%;
-  padding: 30px 0;
+  width: 80%;
 
   @media (max-width: 1200px) {
     width: 75%;
@@ -10,11 +9,13 @@
     width: 90%;
   }
   .logo {
-    width: 40%;
-    margin: auto;
-    padding: 50px 0;
+    display: flex;
+    padding: 10px 0;
     @media (max-width: 900px) {
       width: 70%;
+    }
+    h1 {
+      padding: 0 10px;
     }
     img {
       width: 100%;
@@ -26,9 +27,6 @@
       flex-direction: column;
     }
     .colum {
-      // display: flex;
-    }
-    .left {
       width: 100%;
       @media (max-width: 900px) {
         width: 100%;
