--- a/client/src/assests/css/footer.css
+++ b/client/src/assests/css/footer.css
@@ -197,16 +197,16 @@
   text-align: center;
   background: rgba(0, 0, 0, 0.3);
   line-height: 170%;
-  padding: 1.5rem;
+  padding: 1rem;
   padding-top: 1.9rem;
-  padding-bottom: 1.8rem;
+  padding-bottom: 1.2rem;
   color: #d8d8d8;
 }
 
 .copyright p:first-child {
   font-size: 1.5rem;
   letter-spacing: 0.5px;
-  padding-bottom: 1.25rem;
+  padding-bottom: .5rem;
   font-weight: 600;
 }
 
