--- a/client/src/assests/css/home.css
+++ b/client/src/assests/css/home.css
@@ -286,7 +286,216 @@ ul {
     padding-bottom: 5vh;
   }
   .Home__banner_countdown > div {
-    margin: 0.5rem .4rem;
+    margin: 0.5rem 0.4rem;
     border-radius: 10px;
   }
+}
+
+.importantInfosWrappers {
+  background: #ebebeb;
+  padding: 3rem 1rem;
+}
+
+.important_infos {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 70%;
+  margin: auto;
+  padding: 2.5rem 0.5rem;
+}
+
+.important_infos .flex_child {
+  width: 290px;
+  background: white;
+  -webkit-box-shadow: rgba(19, 15, 235, 0.164) 3px 6px 15px 0px;
+          box-shadow: rgba(19, 15, 235, 0.164) 3px 6px 15px 0px;
+  position: relative;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.important_infos .flex_child_header {
+  text-align: center;
+  padding: 16px 30px 10px 30px;
+}
+
+.important_infos .flex_child_header p {
+  font-size: 22px;
+  letter-spacing: .2px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  font-weight: bolder;
+}
+
+.important_infos .flex_child_list {
+  padding: 12px 25px 25px 25px;
+  min-height: 235px;
+}
+
+.important_infos .flex_child_list a {
+  display: block;
+  text-decoration: none;
+  padding-bottom: 0.5rem;
+  font-size: 1.5rem;
+  color: #333;
+  font-weight: 300;
+  border-bottom: 1px solid #999;
+  margin-bottom: .7rem;
+}
+
+.important_infos .flex_child_list a:hover {
+  font-weight: 400;
+}
+
+.organizer {
+  padding: 0rem 1rem 6rem 1rem;
+  width: 80%;
+  margin: auto;
+  min-height: 600px;
+}
+
+.organizer_header {
+  padding-top: 2rem;
+  padding-bottom: 2.1rem;
+  text-align: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.organizer_header h2 {
+  font-family: 'Libre Franklin', sans-serif;
+  padding: 1rem 0.5rem;
+  text-align: center;
+  font-weight: 600;
+  font-size: 5.1rem;
+  color: #0c3970;
+  display: inline-block;
+  position: relative;
+}
+
+@media (max-width: 750px) {
+  .organizer_header h2 {
+    font-size: 4rem;
+    padding: 0.8rem 0.2rem 2.2rem 0.2rem;
+  }
+}
+
+.organizer_info {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 2rem;
+}
+
+.organizer_info_left {
+  width: 60%;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+              -ms-grid-row-align: center;
+          align-self: center;
+  margin: 1rem 0rem 1rem 1rem;
+}
+
+.organizer_info_left_header {
+  padding-bottom: 1rem;
+}
+
+.organizer_info_left_header h3 {
+  font-size: 3.2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-family: 'Lato', sans-serif;
+  line-height: 1.7;
+  color: #575757;
+  letter-spacing: 1px;
+}
+
+.organizer_info_left_info {
+  width: 85%;
+  text-align: justify;
+}
+
+.organizer_info_left_info p {
+  padding-bottom: 1rem;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #777;
+  font-size: 1.5rem;
+}
+
+.organizer_info_left_see_more {
+  margin-top: 1.3rem;
+}
+
+.organizer_info_left_see_more a {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.organizer_info_left_see_more a:hover {
+  background-color: #55c57a;
+  color: #fff;
+}
+
+.organizer_info_right {
+  width: 40%;
+  position: relative;
+  margin-top: 1rem;
+}
+
+.organizer_info_right img {
+  position: absolute;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+          box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+  z-index: 10;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+  outline-offset: 2rem;
+}
+
+.organizer_info_right img:hover {
+  outline: 1.5rem solid #0c3970;
+  -webkit-transform: scale(1.05);
+      -ms-transform: scale(1.05);
+       -o-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+          box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+  z-index: 20;
+}
+
+.organizer_info_right img.i1 {
+  left: 0;
+  top: -2rem;
+}
+
+.organizer_info_right img.i2 {
+  right: 0;
+  top: 2rem;
+}
+
+.organizer_info_right img.i3 {
+  left: 20%;
+  top: 10rem;
 }
