--- a/client/src/assests/css/sass/footer.scss
+++ b/client/src/assests/css/sass/footer.scss
@@ -154,15 +154,15 @@
   text-align: center;
   background: rgba(0, 0, 0, 0.3);
   line-height: 170%;
-  padding: 1.5rem;
+  padding: 1rem;
   padding-top: 1.9rem;
-  padding-bottom: 1.8rem;
+  padding-bottom: 1.2rem;
   color: rgb(216, 216, 216);
   p {
     &:first-child {
       font-size: 1.5rem;
       letter-spacing: 0.5px;
-      padding-bottom: 1.25rem;
+      padding-bottom: .5rem;
       font-weight: 600;
 
       @media (max-width: 420px) {
