--- a/client/src/assests/css/sass/home.scss
+++ b/client/src/assests/css/sass/home.scss
@@ -8,6 +8,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
+  background-attachment: fixed;
+
 
     .Home__banner_text {
       padding: 10rem;
@@ -223,7 +225,10 @@
 }
 
 .importantInfosWrappers {
-  background: rgb(235, 235, 235);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../images/importantLinks.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   padding: 3rem 1rem;
 }
 
@@ -282,6 +287,7 @@
   width: 80%;
   margin: auto;
   min-height: 600px;
+
   &_header {
     padding-top: 2rem;
     padding-bottom: 2.1rem;
@@ -340,16 +346,16 @@
         margin-top: 1.3rem;
         a {
           font-size: 1.6rem;
-          color: #55c57a;
+          color: #0f4a92;
           display: inline-block;
           text-decoration: none;
-          border-bottom: 1px solid #55c57a;
+          border-bottom: 1px solid #0c3970;
           padding: 3px;
           -webkit-transition: all 0.2s;
           transition: all 0.2s;
 
           &:hover {
-            background-color: #55c57a;
+            background-color: #0c3970;
             color: #fff;
           }
         }
