--- a/client/src/assests/css/auth.css
+++ b/client/src/assests/css/auth.css
@@ -56,6 +56,7 @@ ul {
 .register_wrapper {
   min-height: 100vh;
   padding-bottom: 5rem;
+  position: relative;
 }
 
 @media (min-width: 600px) {
@@ -194,7 +195,7 @@ ul {
 }
 
 .team_members .member_count {
-  padding-top: .5rem;
+  padding-top: 0.5rem;
   padding-bottom: 1.8rem;
 }
 
@@ -304,7 +305,7 @@ ul {
 
 .login_option {
   font-family: 'Open sans', 'Roboto', sans-serif;
-  letter-spacing: .2px;
+  letter-spacing: 0.2px;
   color: #333;
   font-size: 1.6rem;
 }
@@ -313,4 +314,269 @@ ul {
   padding-left: 0.5rem;
   font-weight: bold;
   font-family: 'Lato';
+}
+
+.loader {
+  position: absolute;
+  font-size: 300px;
+  background: rgba(85, 85, 85, 0.335);
+  z-index: 10;
+  width: 100vw;
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sk-circle {
+  margin: 100px auto;
+  width: 120px;
+  height: 120px;
+  position: relative;
+}
+
+.sk-circle .sk-child {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.sk-circle .sk-child:before {
+  content: '';
+  display: block;
+  margin: 0 auto;
+  width: 15%;
+  height: 15%;
+  background-color: #333;
+  border-radius: 100%;
+  -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
+  -o-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
+     animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
+}
+
+.sk-circle .sk-circle2 {
+  -webkit-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  -o-transform: rotate(30deg);
+     transform: rotate(30deg);
+}
+
+.sk-circle .sk-circle3 {
+  -webkit-transform: rotate(60deg);
+  -ms-transform: rotate(60deg);
+  -o-transform: rotate(60deg);
+     transform: rotate(60deg);
+}
+
+.sk-circle .sk-circle4 {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+     transform: rotate(90deg);
+}
+
+.sk-circle .sk-circle5 {
+  -webkit-transform: rotate(120deg);
+  -ms-transform: rotate(120deg);
+  -o-transform: rotate(120deg);
+     transform: rotate(120deg);
+}
+
+.sk-circle .sk-circle6 {
+  -webkit-transform: rotate(150deg);
+  -ms-transform: rotate(150deg);
+  -o-transform: rotate(150deg);
+     transform: rotate(150deg);
+}
+
+.sk-circle .sk-circle7 {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+     transform: rotate(180deg);
+}
+
+.sk-circle .sk-circle8 {
+  -webkit-transform: rotate(210deg);
+  -ms-transform: rotate(210deg);
+  -o-transform: rotate(210deg);
+     transform: rotate(210deg);
+}
+
+.sk-circle .sk-circle9 {
+  -webkit-transform: rotate(240deg);
+  -ms-transform: rotate(240deg);
+  -o-transform: rotate(240deg);
+     transform: rotate(240deg);
+}
+
+.sk-circle .sk-circle10 {
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+     transform: rotate(270deg);
+}
+
+.sk-circle .sk-circle11 {
+  -webkit-transform: rotate(300deg);
+  -ms-transform: rotate(300deg);
+  -o-transform: rotate(300deg);
+     transform: rotate(300deg);
+}
+
+.sk-circle .sk-circle12 {
+  -webkit-transform: rotate(330deg);
+  -ms-transform: rotate(330deg);
+  -o-transform: rotate(330deg);
+     transform: rotate(330deg);
+}
+
+.sk-circle .sk-circle2:before {
+  -webkit-animation-delay: -1.1s;
+  -o-animation-delay: -1.1s;
+     animation-delay: -1.1s;
+}
+
+.sk-circle .sk-circle3:before {
+  -webkit-animation-delay: -1s;
+  -o-animation-delay: -1s;
+     animation-delay: -1s;
+}
+
+.sk-circle .sk-circle4:before {
+  -webkit-animation-delay: -0.9s;
+  -o-animation-delay: -0.9s;
+     animation-delay: -0.9s;
+}
+
+.sk-circle .sk-circle5:before {
+  -webkit-animation-delay: -0.8s;
+  -o-animation-delay: -0.8s;
+     animation-delay: -0.8s;
+}
+
+.sk-circle .sk-circle6:before {
+  -webkit-animation-delay: -0.7s;
+  -o-animation-delay: -0.7s;
+     animation-delay: -0.7s;
+}
+
+.sk-circle .sk-circle7:before {
+  -webkit-animation-delay: -0.6s;
+  -o-animation-delay: -0.6s;
+     animation-delay: -0.6s;
+}
+
+.sk-circle .sk-circle8:before {
+  -webkit-animation-delay: -0.5s;
+  -o-animation-delay: -0.5s;
+     animation-delay: -0.5s;
+}
+
+.sk-circle .sk-circle9:before {
+  -webkit-animation-delay: -0.4s;
+  -o-animation-delay: -0.4s;
+     animation-delay: -0.4s;
+}
+
+.sk-circle .sk-circle10:before {
+  -webkit-animation-delay: -0.3s;
+  -o-animation-delay: -0.3s;
+     animation-delay: -0.3s;
+}
+
+.sk-circle .sk-circle11:before {
+  -webkit-animation-delay: -0.2s;
+  -o-animation-delay: -0.2s;
+     animation-delay: -0.2s;
+}
+
+.sk-circle .sk-circle12:before {
+  -webkit-animation-delay: -0.1s;
+  -o-animation-delay: -0.1s;
+     animation-delay: -0.1s;
+}
+
+@-webkit-keyframes sk-circleBounceDelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@-o-keyframes sk-circleBounceDelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    -o-transform: scale(0);
+       transform: scale(0);
+  }
+  40% {
+    -webkit-transform: scale(1);
+    -o-transform: scale(1);
+       transform: scale(1);
+  }
+}
+
+@keyframes sk-circleBounceDelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    -o-transform: scale(0);
+       transform: scale(0);
+  }
+  40% {
+    -webkit-transform: scale(1);
+    -o-transform: scale(1);
+       transform: scale(1);
+  }
+}
+
+.registrationFee__header {
+  margin-top: .7rem;
+  padding-bottom: 1.4rem;
+}
+
+.registrationFee__header p {
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+  color: #333;
+}
+
+.registrationFee__amount {
+  margin-top: .7rem;
+  padding-bottom: 2rem;
+}
+
+.registrationFee__amount p {
+  font-size: 2.2rem;
+  font-weight: 300;
+  line-height: 1.2;
+  color: #333;
+}
+
+.registrationFee__des {
+  margin-top: .4rem;
+}
+
+.registrationFee__des small {
+  font-size: 1.5rem;
+  line-height: 1.2;
+  color: #4d4d4d;
+  line-height: 160%;
+  letter-spacing: .4px;
 }
