--- a/client/src/assests/css/sass/home.scss
+++ b/client/src/assests/css/sass/home.scss
@@ -8,8 +8,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
-  background-attachment: fixed;
-
+    background-attachment: fixed;
 
     .Home__banner_text {
       padding: 10rem;
@@ -134,6 +133,7 @@
     justify-content: center;
     align-items: center;
     padding: 1rem;
+
     img {
       width: 80%;
       height: auto;
@@ -225,7 +225,8 @@
 }
 
 .importantInfosWrappers {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../images/importantLinks.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/importantLinks.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -250,7 +251,7 @@
         font-size: 1.6rem;
         color: #333;
       }
-      
+
       &:last-child {
         font-size: 1.4rem;
         color: #555;
@@ -282,7 +283,7 @@
       padding: 16px 30px 10px 30px;
       p {
         font-size: 22px;
-        letter-spacing: .2px;
+        letter-spacing: 0.2px;
         user-select: none;
         font-weight: bolder;
       }
@@ -300,7 +301,7 @@
         font-weight: 300;
 
         border-bottom: 1px solid #999;
-        margin-bottom: .7rem;
+        margin-bottom: 0.7rem;
 
         &:hover {
           font-weight: 400;
@@ -402,6 +403,8 @@
         z-index: 10;
         transition: all 0.2s;
         outline-offset: 2rem;
+        cursor: pointer;
+
 
         &:hover {
           outline: 1.5rem solid #0c3970;
