--- a/client/src/assests/css/sass/auth.scss
+++ b/client/src/assests/css/sass/auth.scss
@@ -129,6 +129,8 @@
   min-height: 90vh;
   padding-bottom: 8rem;
 
+  font-family: 'Roboto', sans-serif;
+
   @media (min-width: 600px) {
     background: url(../images/25331.jpg);
     background-size: cover;
@@ -237,6 +239,64 @@
       color: #4d4d4d;
       line-height: 160%;
       letter-spacing: .4px;
+    }
+  }
+}
+
+.admin_login_wrapper {
+  .login {
+    max-width: 55rem;
+    margin: auto;
+    padding-top: 1rem;
+    margin-top: 6.5rem;
+  
+    @media (max-width: 600px) {
+      padding-top: 0.5rem;
+      margin-top: 2rem;
+      padding-bottom: 1rem;
+    }
+  
+    .login_container {
+      padding: 1.5rem 5rem;
+      background-color: #fff;
+      border-radius: 10px;
+      padding-bottom: 3.4rem;
+      box-shadow: 2px 5px 10px gray;
+  
+      @media (max-width: 600px) {
+        padding: 0.8rem 2rem;
+        box-shadow: none;
+      }
+  
+      .login_logo {
+        width: 50%;
+        margin: auto;
+        padding: 10px;
+        padding-top: 5px;
+        user-select: none;
+        img {
+          width: 100%;
+        }
+      }
+      .login_header {
+        user-select: none;
+        p {
+          text-align: center;
+          margin-top: 0.5rem;
+          margin-bottom: 1.7rem;
+          font-size: 2.5rem;
+          color: #646464;
+        }
+      }
+      p {
+        color: #666;
+        padding: 10px 0;
+      }
+      .login_forget_password {
+        text-align: right;
+        font-size: 15px;
+        padding: 0;
+      }
     }
   }
 }
