--- a/client/src/assests/css/gallery.css
+++ b/client/src/assests/css/gallery.css
@@ -81,7 +81,7 @@ ul {
   padding: 1.5rem 0.5rem 2rem 0.5rem;
   text-align: center;
   font-weight: 600;
-  font-size: 6rem;
+  font-size: 5.5rem;
   color: #0c3970;
 }
 
@@ -121,13 +121,13 @@ ul {
           box-shadow: 4px 6px 8px #b6b6b6;
   overflow: hidden;
   border-radius: 6px;
-  padding: 0.6rem 0.6rem 0.4rem 0.6rem;
+  padding: 6px;
+  padding-bottom: 1px;
 }
 
 @media (max-width: 1550px) {
   .each_gallery__photos .gallery_img_wrapper {
     margin: .5rem;
-    padding: 0.8rem;
   }
 }
 
@@ -142,17 +142,16 @@ ul {
     width: 98%;
     margin: 0.5rem;
     border-radius: 2px;
-    padding: 0.5rem;
   }
 }
 
 .each_gallery__photos .gallery_img_wrapper img {
   width: 100%;
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  -o-transition: -o-transform 0.5s;
-  transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s, -o-transform 0.5s;
+  -webkit-transition: -webkit-transform 0.6s;
+  transition: -webkit-transform 0.6s;
+  -o-transition: -o-transform 0.6s;
+  transition: transform 0.6s;
+  transition: transform 0.6s, -webkit-transform 0.6s, -o-transform 0.6s;
 }
 
 .each_gallery__photos .gallery_img_wrapper img:hover {
