--- a/client/src/assests/css/home.css
+++ b/client/src/assests/css/home.css
@@ -53,6 +53,10 @@ ul {
   text-align: center;
 }
 
+.Home {
+  background: white;
+}
+
 .Home__navbar {
   min-height: 100vh;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../images/icpc_img1.jpg);
@@ -74,8 +78,8 @@ ul {
 }
 
 .Home__navbar .Home__banner_text-primary h1 {
-  font-size: 9rem;
-  padding-bottom: 0.5rem;
+  font-size: 8rem;
+  padding-bottom: 0.7rem;
   letter-spacing: 0.4px;
   font-weight: 400;
   -webkit-user-select: none;
@@ -84,6 +88,18 @@ ul {
           user-select: none;
   text-transform: uppercase;
   font-family: 'Roboto', sans-serif;
+}
+
+@media (max-width: 1300px) {
+  .Home__navbar .Home__banner_text-primary h1 {
+    font-size: 7rem;
+  }
+}
+
+@media (max-width: 1150px) {
+  .Home__navbar .Home__banner_text-primary h1 {
+    font-size: 6.5rem;
+  }
 }
 
 .Home__navbar .Home__banner_text-secondary h3 {
@@ -98,6 +114,12 @@ ul {
   font-family: 'Roboto', sans-serif;
 }
 
+@media (max-width: 1200px) {
+  .Home__navbar .Home__banner_text-secondary h3 {
+    font-size: 4rem;
+  }
+}
+
 .Home__banner_countdown {
   display: -webkit-box;
   display: -webkit-flex;
@@ -107,7 +129,7 @@ ul {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-bottom: 4rem;
+  margin-bottom: 4.3rem;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -151,13 +173,25 @@ ul {
 }
 
 .sponsor__heading {
-  padding-top: 2rem;
-  padding-bottom: 2.1rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
   text-align: center;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+}
+
+@media (max-width: 1150px) {
+  .sponsor__heading {
+    padding-top: 2rem;
+  }
+}
+
+@media (max-width: 772px) {
+  .sponsor__heading {
+    padding-top: 2.5rem;
+  }
 }
 
 .sponsor__heading h2 {
@@ -174,21 +208,8 @@ ul {
 @media (max-width: 750px) {
   .sponsor__heading h2 {
     font-size: 4rem;
-    padding: 0.8rem 0.2rem 2.2rem 0.2rem;
+    padding: 1rem 0.2rem 2.2rem 0.2rem;
   }
-}
-
-.sponsor__heading h2:after {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 100%;
-  margin: 0 auto;
-  width: 43%;
-  height: 6px;
-  background: #0c3970;
-  border-radius: 100px;
 }
 
 .sponsors {
@@ -206,6 +227,7 @@ ul {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
+  padding-bottom: 2rem;
 }
 
 .sponsors .sponsor_img {
@@ -228,6 +250,7 @@ ul {
       -ms-flex-align: center;
           align-items: center;
   padding: 1rem;
+  cursor: pointer;
 }
 
 @media (max-width: 750px) {
@@ -272,7 +295,6 @@ ul {
     width: 12rem;
     margin: 0.5rem 1rem;
     border: 4px solid #0f3057;
-    border-radius: 0;
     font-size: 2.5rem;
   }
   .Home__banner_countdown > div > p:last-child {
@@ -337,17 +359,21 @@ ul {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 70%;
   margin: auto;
-  padding: 2.5rem 0.5rem;
+  padding: 2.5rem 0.5rem 1rem 0.5rem;
 }
 
 .important_infos .flex_child {
   width: 290px;
+  margin-bottom: 2rem;
   background: white;
   -webkit-box-shadow: rgba(19, 15, 235, 0.164) 3px 6px 15px 0px;
           box-shadow: rgba(19, 15, 235, 0.164) 3px 6px 15px 0px;
@@ -396,6 +422,25 @@ ul {
   width: 80%;
   margin: auto;
   min-height: 600px;
+  background: white;
+}
+
+@media (max-width: 1500px) {
+  .organizer {
+    width: 90%;
+  }
+}
+
+@media (max-width: 1350px) {
+  .organizer {
+    width: 98%;
+  }
+}
+
+@media (max-width: 1150px) {
+  .organizer {
+    min-height: 300px;
+  }
 }
 
 .organizer_header {
@@ -408,9 +453,15 @@ ul {
           user-select: none;
 }
 
+@media (max-width: 1150px) {
+  .organizer_header {
+    padding-bottom: 0rem;
+  }
+}
+
 .organizer_header h2 {
   font-family: 'Libre Franklin', sans-serif;
-  padding: 1rem 0.5rem;
+  padding: 1rem 0.5rem 1rem 0.5rem;
   text-align: center;
   font-weight: 600;
   font-size: 5.1rem;
@@ -431,7 +482,22 @@ ul {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: space-evenly;
+  -webkit-justify-content: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   padding-top: 2rem;
+}
+
+@media (max-width: 1150px) {
+  .organizer_info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 1.2rem;
+  }
 }
 
 .organizer_info_left {
@@ -440,21 +506,59 @@ ul {
       -ms-flex-item-align: center;
               -ms-grid-row-align: center;
           align-self: center;
-  margin: 1rem 0rem 1rem 1rem;
+  margin: 0.4rem 0rem 1rem 1rem;
+}
+
+@media (max-width: 1150px) {
+  .organizer_info_left {
+    margin: 0 0rem 1rem 1rem;
+    width: 80%;
+    margin: auto;
+  }
+}
+
+@media (max-width: 600px) {
+  .organizer_info_left {
+    width: 90%;
+  }
+}
+
+@media (max-width: 400px) {
+  .organizer_info_left {
+    width: 95%;
+  }
 }
 
 .organizer_info_left_header {
-  padding-bottom: 1rem;
+  padding-bottom: 0.7rem;
 }
 
 .organizer_info_left_header h3 {
-  font-size: 3.2rem;
+  font-size: 3.3rem;
   font-weight: 700;
   text-transform: uppercase;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Raleway', sans-serif;
   line-height: 1.7;
   color: #575757;
   letter-spacing: 1px;
+  background-image: -webkit-gradient(linear, left top, right top, from(#7ed56f), to(#28b485));
+  background-image: -webkit-linear-gradient(left, #7ed56f, #28b485);
+  background-image: -o-linear-gradient(left, #7ed56f, #28b485);
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+@media (max-width: 1150px) {
+  .organizer_info_left_header h3 {
+    text-align: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .organizer_info_left_header h3 {
+    font-size: 3rem;
+  }
 }
 
 .organizer_info_left_info {
@@ -462,17 +566,30 @@ ul {
   text-align: justify;
 }
 
+@media (max-width: 1220px) {
+  .organizer_info_left_info {
+    width: 98%;
+  }
+}
+
 .organizer_info_left_info p {
   padding-bottom: 1rem;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
-  line-height: 1.7;
-  color: #777;
+  line-height: 170%;
+  color: #686868;
   font-size: 1.5rem;
 }
 
 .organizer_info_left_see_more {
   margin-top: 1.3rem;
+}
+
+@media (max-width: 1150px) {
+  .organizer_info_left_see_more {
+    text-align: right;
+    width: 98%;
+  }
 }
 
 .organizer_info_left_see_more a {
@@ -482,6 +599,7 @@ ul {
   text-decoration: none;
   border-bottom: 1px solid #0c3970;
   padding: 3px;
+  padding-left: 5px;
   -webkit-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
@@ -498,9 +616,21 @@ ul {
   margin-top: 1rem;
 }
 
+@media (max-width: 1150px) {
+  .organizer_info_right {
+    display: none;
+  }
+}
+
+@media (max-width: 1220px) {
+  .organizer_info_right {
+    width: 45%;
+  }
+}
+
 .organizer_info_right img {
   position: absolute;
-  border-radius: 2px;
+  border-radius: 5px;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
           box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
   z-index: 10;
@@ -509,6 +639,15 @@ ul {
   transition: all 0.2s;
   outline-offset: 2rem;
   cursor: pointer;
+  height: 210px;
+  width: 320px;
+}
+
+@media (max-width: 1350px) {
+  .organizer_info_right img {
+    height: 170px;
+    width: 270px;
+  }
 }
 
 .organizer_info_right img:hover {
@@ -524,15 +663,27 @@ ul {
 
 .organizer_info_right img.i1 {
   left: 0;
-  top: -2rem;
+  top: 0;
+  -webkit-transform: translate(-20px, -10px);
+      -ms-transform: translate(-20px, -10px);
+       -o-transform: translate(-20px, -10px);
+          transform: translate(-20px, -10px);
 }
 
 .organizer_info_right img.i2 {
-  right: 0;
-  top: 2rem;
+  left: 0;
+  top: 0;
+  -webkit-transform: translate(210px, 40px);
+      -ms-transform: translate(210px, 40px);
+       -o-transform: translate(210px, 40px);
+          transform: translate(210px, 40px);
 }
 
 .organizer_info_right img.i3 {
-  left: 20%;
-  top: 10rem;
+  left: 0;
+  top: 0;
+  -webkit-transform: translate(80px, 120px);
+      -ms-transform: translate(80px, 120px);
+       -o-transform: translate(80px, 120px);
+          transform: translate(80px, 120px);
 }
