--- a/client/src/assests/css/sass/auth.scss
+++ b/client/src/assests/css/sass/auth.scss
@@ -16,14 +16,18 @@
     background-color: white;
   }
   .register {
-    max-width: 150rem;
+    max-width: 90%;
     margin: auto;
     padding-top: 2rem;
     margin-top: 6.5rem;
 
+    @media (max-width: 1000px) {
+      max-width: 98%;
+    }
+
     @media (max-width: 600px) {
-      padding-top: 0.5rem;
-      margin-top: 2rem;
+      padding-top: 0rem;
+      margin-top: 1rem;
       padding-bottom: 1rem;
     }
     &_container {
@@ -40,13 +44,14 @@
     }
 
     &_logo {
-      // width: 50%;
       text-align: center;
       margin: auto;
       padding: 10px;
       user-select: none;
       img {
-        // width: 100%;
+        @media (max-width: 500px) {
+          width: 100%;
+        }
       }
     }
     &_your_team {
@@ -57,6 +62,11 @@
         font-size: 2.9rem;
         color: #555555;
         padding-bottom: 2rem;
+
+        @media(max-width: 600px) {
+          font-size: 3.5rem;
+          margin-bottom: 2.6rem;
+        }
       }
     }
   }
@@ -74,6 +84,19 @@
     width: 28%;
   }
 
+  @media (max-width: 800px) {
+    flex-direction: column;
+
+    &_left {
+      width: 98%;
+    }
+
+    &_right {
+      width: 98%;
+      padding-bottom: 2.5rem;
+    }
+  }
+
   .secondary_heading {
     padding-bottom: 2rem;
     p {
@@ -86,23 +109,13 @@
 
   .flex_row {
     display: flex;
+    @media (max-width: 600px) {
+      flex-direction: column;
+    }
   }
 
   .flex_row_full_width {
   }
-}
-
-.payment_methods {
-  margin-top: 2rem;
-  height: 350px;
-  width: 100%;
-  background: gray;
-  font-size: 5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
 }
 
 .team_members {
@@ -210,10 +223,10 @@
 
 .registrationFee {
   &__header {
-    margin-top: .7rem;
+    margin-top: 0.7rem;
     padding-bottom: 1.4rem;
     p {
-      font-size: 3.5rem;
+      font-size: 3.3rem;
       font-weight: 300;
       line-height: 1.2;
       color: #333;
@@ -221,8 +234,12 @@
   }
 
   &__amount {
-    margin-top: .7rem;
+    margin-top: 0.7rem;
     padding-bottom: 2rem;
+
+    @media(max-width: 600px) {
+      padding-bottom: 1.3rem;
+    }
     p {
       font-size: 2.2rem;
       font-weight: 300;
@@ -232,13 +249,13 @@
   }
 
   &__des {
-    margin-top: .4rem;
+    margin-top: 0.4rem;
     small {
       font-size: 1.5rem;
       line-height: 1.2;
       color: #4d4d4d;
       line-height: 160%;
-      letter-spacing: .4px;
+      letter-spacing: 0.4px;
     }
   }
 }
@@ -249,25 +266,25 @@
     margin: auto;
     padding-top: 1rem;
     margin-top: 6.5rem;
-  
+
     @media (max-width: 600px) {
       padding-top: 0.5rem;
       margin-top: 2rem;
       padding-bottom: 1rem;
     }
-  
+
     .login_container {
       padding: 1.5rem 5rem;
       background-color: #fff;
       border-radius: 10px;
       padding-bottom: 3.4rem;
       box-shadow: 2px 5px 10px gray;
-  
+
       @media (max-width: 600px) {
         padding: 0.8rem 2rem;
         box-shadow: none;
       }
-  
+
       .login_logo {
         width: 50%;
         margin: auto;
