--- a/client/src/assests/css/sass/gallery.scss
+++ b/client/src/assests/css/sass/gallery.scss
@@ -21,7 +21,7 @@
       padding: 1.5rem 0.5rem 2rem 0.5rem;
       text-align: center;
       font-weight: 600;
-      font-size: 6rem;
+      font-size: 5.5rem;
       color: #0c3970;
 
       @media (max-width: 750px) {
@@ -47,11 +47,11 @@
       box-shadow: 4px 6px 8px #b6b6b6;
       overflow: hidden;
       border-radius: 6px;
-      padding: 0.6rem 0.6rem 0.4rem 0.6rem;
+      padding: 6px;
+      padding-bottom: 1px;
 
       @media (max-width: 1550px) {
         margin: .5rem;
-        padding: 0.8rem;
       }
 
       @media (max-width: 1200px) {
@@ -62,12 +62,11 @@
         width: 98%;
         margin: 0.5rem;
         border-radius: 2px;
-        padding: 0.5rem;
       }
 
       img {
         width: 100%;
-        transition: transform 0.5s;
+        transition: transform 0.6s;
 
         &:hover {
           cursor: pointer;
