--- a/client/src/assests/css/sass/home.scss
+++ b/client/src/assests/css/sass/home.scss
@@ -1,6 +1,7 @@
 @import '_main';
 
 .Home {
+  background: white;
   &__navbar {
     min-height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -18,13 +19,21 @@
 
       &-primary {
         h1 {
-          font-size: 9rem;
-          padding-bottom: 0.5rem;
+          font-size: 8rem;
+          padding-bottom: 0.7rem;
           letter-spacing: 0.4px;
           font-weight: 400;
           user-select: none;
           text-transform: uppercase;
           font-family: 'Roboto', sans-serif;
+
+          @media (max-width: 1300px) {
+            font-size: 7rem;
+          }
+
+          @media (max-width: 1150px) {
+            font-size: 6.5rem;
+          }
         }
       }
 
@@ -37,6 +46,10 @@
           user-select: none;
           font-family: 'Roboto', sans-serif;
 
+          @media (max-width: 1200px) {
+            font-size: 4rem;
+          }
+
           span {
           }
         }
@@ -48,7 +61,7 @@
 .Home__banner_countdown {
   display: flex;
   justify-content: center;
-  margin-bottom: 4rem;
+  margin-bottom: 4.3rem;
   user-select: none;
   > div {
     height: 16rem;
@@ -78,10 +91,18 @@
 .sponsor {
   padding-bottom: 3rem;
   &__heading {
-    padding-top: 2rem;
-    padding-bottom: 2.1rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
     text-align: center;
     user-select: none;
+
+    @media (max-width: 1150px) {
+      padding-top: 2rem;
+    }
+
+    @media(max-width: 772px) { 
+      padding-top: 2.5rem;
+    }
     h2 {
       font-family: 'Libre Franklin', sans-serif;
       padding: 1.5rem 0.5rem;
@@ -93,22 +114,22 @@
 
       @media (max-width: 750px) {
         font-size: 4rem;
-        padding: 0.8rem 0.2rem 2.2rem 0.2rem;
+        padding: 1rem 0.2rem 2.2rem 0.2rem;
       }
       position: relative;
-      &:after {
-        content: '';
-        position: absolute;
+      // &:after {
+      //   content: '';
+      //   position: absolute;
 
-        left: 0;
-        right: 0;
-        top: 100%;
-        margin: 0 auto;
-        width: 43%;
-        height: 6px;
-        background: #0c3970;
-        border-radius: 100px;
-      }
+      //   left: 0;
+      //   right: 0;
+      //   top: 100%;
+      //   margin: 0 auto;
+      //   width: 43%;
+      //   height: 6px;
+      //   background: #0c3970;
+      //   border-radius: 100px;
+      // }
     }
   }
 }
@@ -119,6 +140,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  padding-bottom: 2rem;
   .sponsor_img {
     width: 20%;
 
@@ -133,6 +155,7 @@
     justify-content: center;
     align-items: center;
     padding: 1rem;
+    cursor: pointer;
 
     img {
       width: 80%;
@@ -177,9 +200,8 @@
       width: 12rem;
       margin: 0.5rem 1rem;
       border: 4px solid #0f3057;
-
-      border-radius: 0;
       font-size: 2.5rem;
+
 
       > p {
         &:last-child {
@@ -263,12 +285,15 @@
 
 .important_infos {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 70%;
   margin: auto;
-  padding: 2.5rem 0.5rem;
+  padding: 2.5rem 0.5rem 1rem 0.5rem;
+
   .flex_child {
     width: 290px;
+    margin-bottom: 2rem;
 
     background: rgb(255, 255, 255);
     box-shadow: rgba(19, 15, 235, 0.164) 3px 6px 15px 0px;
@@ -316,63 +341,117 @@
   width: 80%;
   margin: auto;
   min-height: 600px;
+  background: white;
+
+  @media (max-width: 1500px) {
+    width: 90%;
+  }
+
+  @media (max-width: 1350px) {
+    width: 98%;
+  }
+
+  @media (max-width: 1150px) {
+    min-height: 300px;
+  }
 
   &_header {
     padding-top: 2rem;
     padding-bottom: 2.1rem;
     text-align: center;
     user-select: none;
+
+    @media (max-width: 1150px) {
+      padding-bottom: 0rem;
+    }
     h2 {
       font-family: 'Libre Franklin', sans-serif;
-      padding: 1rem 0.5rem;
+      padding: 1rem 0.5rem 1rem 0.5rem;
       text-align: center;
       font-weight: 600;
       font-size: 5.1rem;
       color: #0c3970;
       display: inline-block;
+      position: relative;
 
       @media (max-width: 750px) {
         font-size: 4rem;
         padding: 0.8rem 0.2rem 2.2rem 0.2rem;
       }
-      position: relative;
     }
   }
 
   &_info {
     display: flex;
+    justify-content: space-evenly;
+
     padding-top: 2rem;
+    @media (max-width: 1150px) {
+      flex-direction: column;
+      padding-top: 1.2rem;
+    }
     &_left {
       width: 60%;
       align-self: center;
-      margin: 1rem 0rem 1rem 1rem;
+      margin: 0.4rem 0rem 1rem 1rem;
+      @media (max-width: 1150px) {
+        margin: 0 0rem 1rem 1rem;
+        width: 80%;
+        margin: auto;
+      }
+      @media (max-width: 600px) {
+        width: 90%;
+      }
+      @media (max-width: 400px) {
+        width: 95%;
+      }
+
       &_header {
-        padding-bottom: 1rem;
+        padding-bottom: 0.7rem;
         h3 {
-          font-size: 3.2rem;
+          font-size: 3.3rem;
           font-weight: 700;
           text-transform: uppercase;
-          font-family: 'Lato', sans-serif;
+          font-family: 'Raleway', sans-serif;
           line-height: 1.7;
           color: rgb(87, 87, 87);
           letter-spacing: 1px;
+          background-image: linear-gradient(to right, #7ed56f, #28b485);
+          -webkit-background-clip: text;
+          color: transparent;
+
+          @media (max-width: 1150px) {
+            text-align: center;
+          }
+
+          @media (max-width: 500px) {
+            font-size: 3rem;
+          }
         }
       }
       &_info {
         width: 85%;
         text-align: justify;
+
+        @media (max-width: 1220px) {
+          width: 98%;
+        }
         p {
           padding-bottom: 1rem;
           font-family: 'Lato', sans-serif;
           font-weight: 400;
-          line-height: 1.7;
-          color: #777;
+          line-height: 170%;
+          color: #686868;
           font-size: 1.5rem;
         }
       }
 
       &_see_more {
         margin-top: 1.3rem;
+        @media (max-width: 1150px) {
+          text-align: right;
+          width: 98%;
+        }
         a {
           font-size: 1.6rem;
           color: #0f4a92;
@@ -380,6 +459,7 @@
           text-decoration: none;
           border-bottom: 1px solid #0c3970;
           padding: 3px;
+          padding-left: 5px;
           -webkit-transition: all 0.2s;
           transition: all 0.2s;
 
@@ -395,16 +475,31 @@
       width: 40%;
       position: relative;
       margin-top: 1rem;
+      // border: 10px solid black;
+
+      @media (max-width: 1150px) {
+        display: none;
+      }
+
+      @media (max-width: 1220px) {
+        width: 45%;
+      }
 
       img {
         position: absolute;
-        border-radius: 2px;
+        border-radius: 5px;
         box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
         z-index: 10;
         transition: all 0.2s;
         outline-offset: 2rem;
         cursor: pointer;
+        height: 210px;
+        width: 320px;
 
+        @media (max-width: 1350px) {
+          height: 170px;
+          width: 270px;
+        }
 
         &:hover {
           outline: 1.5rem solid #0c3970;
@@ -412,20 +507,26 @@
           box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
           z-index: 20;
         }
+        // 70 20
+        // 120 20
+        // 0 0
 
         &.i1 {
           left: 0;
-          top: -2rem;
+          top: 0;
+          transform: translate(-20px, -10px);
         }
 
         &.i2 {
-          right: 0;
-          top: 2rem;
+          left: 0;
+          top: 0;
+          transform: translate(210px, 40px);
         }
 
         &.i3 {
-          left: 20%;
-          top: 10rem;
+          left: 0;
+          top: 0;
+          transform: translate(80px, 120px);
         }
       }
     }
