--- a/client/src/assests/css/sass/footer.scss
+++ b/client/src/assests/css/sass/footer.scss
@@ -119,16 +119,22 @@
   }
 
   .inputBox {
+    height: 40px;
+    overflow: hidden;
+    display: flex;
     input {
-      padding: 10px;
+      padding: 12px 10px;
       width: 50%;
       margin: 0;
       height: 100%;
+
+      &:focus, &:active {
+        outline: none;
+      }
     }
     button {
-      padding: 18px;
-      padding-top: 11px;
-      padding-bottom: 11.55px;
+      padding: 0px 16px;
+      letter-spacing: .5px;
       font-size: 14px;
       font-weight: 700;
       font-family: 'Roboto', sans-serif;
