--- a/client/src/assests/css/home.css
+++ b/client/src/assests/css/home.css
@@ -366,9 +366,21 @@ ul {
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 70%;
+  width: 75%;
   margin: auto;
   padding: 2.5rem 0.5rem 1rem 0.5rem;
+}
+
+@media (max-width: 1350px) {
+  .important_infos {
+    width: 95%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .important_infos {
+    width: 99%;
+  }
 }
 
 .important_infos .flex_child {
@@ -567,6 +579,12 @@ ul {
 }
 
 @media (max-width: 1220px) {
+  .organizer_info_left_info {
+    width: 95%;
+  }
+}
+
+@media (max-width: 1100px) {
   .organizer_info_left_info {
     width: 98%;
   }
